--- a/src/core/core.vcxproj.filters
+++ b/src/core/core.vcxproj.filters
@@ -209,6 +209,9 @@
     <ClCompile Include="src\debugger\debugger.cpp">
       <Filter>debugger</Filter>
     </ClCompile>
+    <ClCompile Include="src\video\emuwindow_sdl.cpp">
+      <Filter>video</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\hw\hw.h">
@@ -347,6 +350,12 @@
     </ClInclude>
     <ClInclude Include="src\debugger\debugger.h">
       <Filter>debugger</Filter>
+    </ClInclude>
+    <ClInclude Include="src\video\emuwindow.h">
+      <Filter>video</Filter>
+    </ClInclude>
+    <ClInclude Include="src\video\emuwindow_sdl.h">
+      <Filter>video</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
