Add hotkey functionality (without user interface, they can be configured via the application settings though)
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@135 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/CMakeLists.txt
+++ b/src/gekko_qt/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRCS
             src/callstack.cpp
             src/disasm.cpp
             src/gekko_regs.cpp
+            src/hotkeys.cpp
             src/image_info.cpp
             src/main.cpp
             src/ramview.cpp)
